AUTOMAKE_OPTIONS = dist-zip foreign

EXTRA_DIST = INDEX \
	data/nedit/gpasm.pats \
	examples/example1/Makefile \
	examples/example1/README \
	examples/example1/rcvr.asm \
	examples/example1/rs232.asm \
	examples/example1/rs232.h \
	examples/example1/txmtr.asm \
	src/header/mcp2510.inc \
	src/memory/flags.asm \
	src/memory/str.asm	
	
