AUTOMAKE_OPTIONS = dist-zip foreign

EXTRA_DIST = \
	data/nedit/gpal.pats \
	data/nedit/gpasm.pats \
	examples/example1/Makefile \
	examples/example1/README \
	examples/example1/rcvr.asm \
	examples/example1/rs232.asm \
	examples/example1/rs232.h \
	examples/example1/txmtr.asm \
	examples/example2/Makefile \
	examples/example2/README \
	examples/example2/16f873.lkr \
	examples/example2/flags.inc \
	examples/example2/i2ccomm1.inc \
	examples/example2/i2ccomm.asm \
	examples/example2/i2ccomm.inc \
	examples/example2/init.asm \
	examples/example2/mastri2c.asm \
	examples/example2/mastri2c.inc \
	examples/example3/16f877.lkr \
	examples/example3/config.pub \
	examples/example3/delay.pal \
	examples/example3/delay.pub \
	examples/example3/main.pal \
	examples/example3/main.pub \
	examples/example3/Makefile \
	examples/example3/stack.pal \
	examples/example3/stack.pub \
	examples/example3/types.pub
