# Makefile.am
# Copyright (C) 2000, 2001, 2002, 2003
# Craig Franklin
# 
# This file is part of gputils.
# 
# gputils is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# gputils is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with gputils; see the file COPYING.  If not, write to
# the Free Software Foundation, 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.

pkgdatadir = @GPASM_HEADER_PATH@

EXTRA_DIST =\
	mcp250xx.inc \
	memory.inc \
	p12c508.inc \
	p12c508a.inc \
	p12c509.inc \
	p12c509a.inc \
	p12c671.inc \
	p12c672.inc \
	p12ce518.inc \
	p12ce519.inc \
	p12ce673.inc \
	p12ce674.inc \
	p12f629.inc \
	p12f675.inc \
	p14000.inc \
	p16c432.inc \
	p16c433.inc \
	p16c505.inc \
	p16c554.inc \
	p16c558.inc \
	p16c5x.inc \
	p16c61.inc \
	p16c62.inc \
	p16c620.inc \
	p16c620a.inc \
	p16c621.inc \
	p16c621a.inc \
	p16c622.inc \
	p16c622a.inc \
	p16c62a.inc \
	p16c62b.inc \
	p16c63.inc \
	p16c63a.inc \
	p16c64.inc \
	p16c642.inc \
	p16c64a.inc \
	p16c65.inc \
	p16c65a.inc \
	p16c65b.inc \
	p16c66.inc \
	p16c662.inc \
	p16c67.inc \
	p16c71.inc \
	p16c710.inc \
	p16c711.inc \
	p16c712.inc \
	p16c715.inc \
	p16c716.inc \
	p16c717.inc \
	p16c72.inc \
	p16c72a.inc \
	p16c73.inc \
	p16c73a.inc \
	p16c73b.inc \
	p16c74.inc \
	p16c745.inc \
	p16c74a.inc \
	p16c74b.inc \
	p16c76.inc \
	p16c765.inc \
	p16c77.inc \
	p16c770.inc \
	p16c771.inc \
	p16c773.inc \
	p16c774.inc \
	p16c781.inc \
	p16c782.inc \
	p16c84.inc \
	p16c923.inc \
	p16c924.inc \
	p16c925.inc \
	p16c926.inc \
	p16ce623.inc \
	p16ce624.inc \
	p16ce625.inc \
	p16cr62.inc \
	p16cr63.inc \
	p16cr64.inc \
	p16cr65.inc \
	p16cr72.inc \
	p16cr83.inc \
	p16cr84.inc \
	p16f627.inc \
	p16f627a.inc \
	p16f628.inc \
	p16f628a.inc \
	p16f630.inc \
	p16f676.inc \
	p16f72.inc \
	p16f73.inc \
	p16f74.inc \
	p16f76.inc \
	p16f77.inc \
	p16f818.inc \
	p16f819.inc \
	p16f83.inc \
	p16f84.inc \
	p16f84a.inc \
	p16f87.inc \
	p16f870.inc \
	p16f871.inc \
	p16f872.inc \
	p16f873.inc \
	p16f873a.inc \
	p16f874.inc \
	p16f874a.inc \
	p16f876.inc \
	p16f876a.inc \
	p16f877.inc \
	p16f877a.inc \
	p16f88.inc \
	p16hv540.inc \
	p17c42.inc \
	p17c42a.inc \
	p17c43.inc \
	p17c44.inc \
	p17c752.inc \
	p17c756.inc \
	p17c756a.inc \
	p17c762.inc \
	p17c766.inc \
	p17cr42.inc \
	p17cr43.inc \
	p18c242.inc \
	p18c252.inc \
	p18c442.inc \
	p18c452.inc \
	p18c601.inc \
	p18c658.inc \
	p18c801.inc \
	p18c858.inc \
	p18cxxx.inc \
	p18f1220.inc \
	p18f1320.inc \
	p18f2220.inc \
	p18f2320.inc \
	p18f242.inc \
	p18f248.inc \
	p18f252.inc \
	p18f258.inc \
	p18f4220.inc \
	p18f4320.inc \
	p18f442.inc \
	p18f448.inc \
	p18f452.inc \
	p18f458.inc \
	p18f6620.inc \
	p18f6720.inc \
	p18f8620.inc \
	p18f8720.inc \
	p18macro.inc \
	rf509af.inc \
	rf509ag.inc	

pkgdata_DATA= $(EXTRA_DIST)
