# Makefile.am
# Copyright (C) 2001, 2002, 2003
# Craig Franklin
# 
# This file is part of gputils.
# 
# gputils is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# gputils is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with gputils; see the file COPYING.  If not, write to
# the Free Software Foundation, 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.

pkgdatadir = @GPLINK_LKR_PATH@

EXTRA_DIST =\
	12c508a.lkr \
	12c508.lkr \
	12c509a.lkr \
	12c509.lkr \
	12c671.lkr \
	12c672.lkr \
	12ce518.lkr \
	12ce519.lkr \
	12ce673.lkr \
	12ce674.lkr \
	12cr509a.lkr \
	12f629.lkr \
	12f675.lkr \
	14000.lkr \
	16c432.lkr \
	16c433.lkr \
	16c505.lkr \
	16c52.lkr \
	16c54a.lkr \
	16c54b.lkr \
	16c54c.lkr \
	16c54.lkr \
	16c554.lkr \
	16c558.lkr \
	16c55a.lkr \
	16c55.lkr \
	16c56a.lkr \
	16c56.lkr \
	16c57c.lkr \
	16c57.lkr \
	16c58a.lkr \
	16c58b.lkr \
	16c61.lkr \
	16c620a.lkr \
	16c620.lkr \
	16c621a.lkr \
	16c621.lkr \
	16c622a.lkr \
	16c622.lkr \
	16c62a.lkr \
	16c62b.lkr \
	16c62.lkr \
	16c63a.lkr \
	16c63.lkr \
	16c642.lkr \
	16c64a.lkr \
	16c64.lkr \
	16c65a.lkr \
	16c65b.lkr \
	16c65.lkr \
	16c662.lkr \
	16c66.lkr \
	16c67.lkr \
	16c710.lkr \
	16c711.lkr \
	16c712.lkr \
	16c715.lkr \
	16c716.lkr \
	16c717.lkr \
	16c71.lkr \
	16c72a.lkr \
	16c72.lkr \
	16c73a.lkr \
	16c73b.lkr \
	16c73.lkr \
	16c745.lkr \
	16c74a.lkr \
	16c74b.lkr \
	16c74.lkr \
	16c765.lkr \
	16c76.lkr \
	16c770.lkr \
	16c771.lkr \
	16c773.lkr \
	16c774.lkr \
	16c77.lkr \
	16c781.lkr \
	16c782.lkr \
	16c84.lkr \
	16c923.lkr \
	16c924.lkr \
	16c925.lkr \
	16c926.lkr \
	16ce623.lkr \
	16ce624.lkr \
	16ce625.lkr \
	16cr54a.lkr \
	16cr54b.lkr \
	16cr54c.lkr \
	16cr54.lkr \
	16cr56a.lkr \
	16cr57a.lkr \
	16cr57b.lkr \
	16cr57c.lkr \
	16cr58a.lkr \
	16cr58b.lkr \
	16cr620a.lkr \
	16cr62.lkr \
	16cr63.lkr \
	16cr64.lkr \
	16cr65.lkr \
	16cr72.lkr \
	16cr83.lkr \
	16cr84.lkr \
	16f627.lkr \
	16f627a.lkr \
	16f628.lkr \
	16f628a.lkr \
	16f630.lkr \
	16f676.lkr \
	16f72.lkr \
	16f73.lkr \
	16f74.lkr \
	16f76.lkr \
	16f77.lkr \
	16f818.lkr \
	16f819.lkr \
	16f83.lkr \
	16f84a.lkr \
	16f84.lkr \
	16f85.lkr \
	16f86.lkr \
	16f87.lkr \
	16f88.lkr \
	16f870i.lkr \
	16f870.lkr \
	16f871i.lkr \
	16f871.lkr \
	16f872i.lkr \
	16f872.lkr \
	16f873i.lkr \
	16f873a.lkr \
	16f873.lkr \
	16f874a.lkr \
	16f874i.lkr \
	16f874.lkr \
	16f876a.lkr \
	16f876i.lkr \
	16f876.lkr \
	16f877a.lkr \
	16f877i.lkr \
	16f877.lkr \
	16hv540.lkr \
	17c42a.lkr \
	17c42.lkr \
	17c43.lkr \
	17c44.lkr \
	17c752.lkr \
	17c756a.lkr \
	17c756.lkr \
	17c762.lkr \
	17c766.lkr \
	17cr42.lkr \
	17cr43.lkr \
	18c242.lkr \
	18c252.lkr \
	18c442.lkr \
	18c452.lkr \
	18c601i.lkr \
	18c601.lkr \
	18c658.lkr \
	18c801i.lkr \
	18c801.lkr \
	18c858.lkr \
	18f1220.lkr \
	18f1320.lkr \
	18f2220.lkr \
	18f2320.lkr \
	18f242i.lkr \
	18f242.lkr \
	18f248.lkr \
	18f248i.lkr \
	18f252.lkr \
	18f252i.lkr \
	18f258.lkr \
	18f258i.lkr \
	18f4220.lkr \
	18f4320.lkr \
	18f442.lkr \
	18f442i.lkr \
	18f448.lkr \
	18f448i.lkr \
	18f452.lkr \
	18f452i.lkr \
	18f458.lkr \
	18f458i.lkr \
	18f6620.lkr \
	18f6620i.lkr \
	18f6720.lkr \
	18f6720i.lkr \
	18f8620.lkr \
	18f8620i.lkr \
	18f8720.lkr \
	18f8720i.lkr \
	rf509af.lkr \
	rf509ag.lkr

pkgdata_DATA= $(EXTRA_DIST)
