#! /bin/sh

dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)

# Initialization
AC_INIT([gputils-extra],[0.0.4])
AC_CONFIG_SRCDIR(examples/example1/rcvr.asm)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC

# Generate Makefile
AC_CONFIG_FILES(Makefile)

AC_OUTPUT

AC_MSG_RESULT([

gputils-extra-$PACKAGE_VERSION is now configured.
  
])
