#! /bin/bash

# Initialization
AC_INIT(src/header/mcp2510.inc)

# Defaults
GPUTILS_EXTRA_MAJOR_VERSION=0
GPUTILS_EXTRA_MINOR_VERSION=0
GPUTILS_EXTRA_MICRO_VERSION=1
GPUTILS_EXTRA_VERSION=$GPUTILS_EXTRA_MAJOR_VERSION.$GPUTILS_EXTRA_MINOR_VERSION.$GPUTILS_EXTRA_MICRO_VERSION

# Initialize automake
AM_INIT_AUTOMAKE(gputils-extra, $GPUTILS_EXTRA_VERSION)

# Substitute configuration variables
AC_SUBST(GPUTILS_MAJOR_VERSION)
AC_SUBST(GPUTILS_MINOR_VERSION)
AC_SUBST(GPUTILS_MICRO_VERSION)
AC_SUBST(GPUTILS_VERSION)

# Generate Makefile
AC_OUTPUT(Makefile)

AC_MSG_RESULT([

gputils-extra-$GPUTILS_EXTRA_VERSION is now configured.
  
])
